--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,14 @@
 {
     "cSpell.words": [
-        "neondatabase"
+        "AKIAW",
+        "eastus",
+        "MECTPDH",
+        "neondatabase",
+        "neondb",
+        "pooler",
+        "sslmode",
+        "vartalapwithpdf",
+        "Volh",
+        "Zqmsc"
     ]
 }
