fixes in upload component and s3.ts

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,11 +3,13 @@
         "AKIAW",
         "eastus",
         "MECTPDH",
+        "MECTPDHTDLUDGW",
         "neondatabase",
         "neondb",
         "pooler",
         "sslmode",
         "vartalapwithpdf",
+        "vartalapwithpdfs",
         "Volh",
         "Zqmsc"
     ]
