--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "@aws-sdk/client-s3": "^3.744.0",
     "@aws-sdk/s3-request-presigner": "^3.744.0",
     "@clerk/nextjs": "^6.11.1",
+    "@langchain/community": "^0.3.34",
+    "@langchain/core": "^0.3.42",
     "@neondatabase/serverless": "^0.10.4",
+    "@pinecone-database/pinecone": "^5.1.1",
     "@radix-ui/react-slot": "^1.1.2",
     "@tanstack/react-query": "^5.66.7",
     "aws-sdk": "^2.1692.0",
@@ -22,8 +25,11 @@
     "dotenv": "^16.4.7",
     "drizzle-kit": "^0.30.4",
     "drizzle-orm": "^0.39.2",
+    "langchain": "^0.3.19",
     "lucide-react": "^0.475.0",
     "next": "^15.1.6",
+    "openai": "^4.86.1",
+    "pdf-parse": "^1.1.1",
     "pg": "^8.13.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
